Added route for sensor warnings and socket channel for frontend to recieve warnings.
